<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="error_field_required">这一项必须填写</string>
    <string name="location_failed">定位失败</string>
    <string name="login_username_hint">请输入用户名</string>
    <string name="login_pwd_hint">请输入密码</string>
    <string name="tag">tag</string>
    <string name="gravity_left">left</string>
    <string name="gravity_center">center</string>
    <string name="gravity_right">right</string>

    <!--outlet create-->
    <string name="outlet_create">新开网点</string>
    <string name="pos_name">终端名称：</string>
    <string name="please_input_pos_name">请输入终端名称</string>
    <string name="category">分&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;类：</string>
    <string-array name="categories">
        <item>餐饮</item>
        <item>流通</item>
        <item>二批分销商</item>
    </string-array>
    <string name="dining">餐饮</string>
    <string name="flow">流通</string>
    <string name="trader">二批分销商</string>
    <string name="address">地&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;址：</string>
    <string name="please_input_address">请输入地址</string>
    <string name="contacts">联&#160;&#160;系&#160;&#160;人：</string>
    <string name="please_input_contacts">请输入联系人</string>
    <string name="phone_number">电&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;话：</string>
    <string name="please_input_phone_number">请输入电话号码</string>
    <string name="remark">备&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;注：</string>
    <string name="remark_hint">可一句话描述该终端特点</string>
    <string name="outlet_save_and_quit">保存并退出</string>
    <string name="outlet_next">下一步</string>
    <string name="create_success">创建成功</string>

    <!-- task brand -->
    <string name="task_brand">品牌推广</string>

    <!-- product list -->
    <string name="select_product">选择商品</string>
    <string name="product_price">零售价：</string>
    <string name="product_count_format">商品（%1$d）</string>
    <string name="product_subtitle_format">%1$s（%2$s）</string>
    <string name="product_price_format">￥%1$s</string>
    <string name="product_price_sum">总价：</string>
    <string name="commit_order">提交订单</string>
    <string name="pay_method">付款方式：</string>
    <string name="cash">现款</string>
    <string name="credit">赊销</string>
    <string name="doing_commit">正在提交订单…</string>
    <string name="commit_success">提交成功</string>

    <!-- order manage -->
    <string name="order_manage">订单管理</string>

    <!-- outlet search -->
    <string name="outlet_search">网点搜索</string>
    <string name="search">搜索</string>
    <string name="hot_search">热门搜索</string>
    <string name="search_result">查询结果</string>
    <string name="outlet_contact">联系人：</string>
    <string name="outlet_phone_number">电话：</string>

    <!-- outlet manage -->
    <string name="outlet_manage">巡店管理</string>
    <string name="door_manage">门头管理</string>
    <string name="list_manage">陈列管理</string>
    <string name="other">其他</string>
    <string name="manage_detail">管理详情</string>

    <!-- advanced POS -->
    <string name="advanced_pos">高级终端</string>
    <string name="advanced_address">地址：</string>

    <!-- note -->
    <string name="note">备忘录</string>
    <string name="content">内容：</string>
    <string name="time">时间：</string>
    <string name="add_new_note">添加新备忘录</string>
    <string name="subject">主题：</string>
    <string name="save">保存</string>
    <string name="saving">正在保存…</string>
    <string name="save_success">保存成功</string>

    <!-- diary -->
    <string name="diary">工作日记</string>
    <string name="problem">问题：</string>
    <string name="profited">心得：</string>
    <string name="plan">计划：</string>
    <string name="add_new_diary">添加新工作日记</string>

    <!-- hot products -->
    <string name="hot_products">热销商品</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>