<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.ui.fragment.OutletCreateFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_big"
            android:orientation="vertical"
            android:padding="@dimen/padding_default">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_height"
                android:layout_gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/content_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pos_name" />

                <EditText
                    android:id="@+id/edt_outlet_name"
                    style="@style/content_edit_single_line_style"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/padding_default"
                    android:hint="@string/please_input_pos_name"
                    android:paddingLeft="@dimen/padding_default"
                    android:paddingRight="@dimen/padding_default" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_height"
                android:layout_marginTop="@dimen/spacing_big"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    style="@style/content_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Spinner
                        android:id="@+id/spinner_outlet_categories"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/padding_default"
                        android:layout_weight="1"
                        android:background="@drawable/input_bg_border_selector"
                        android:entries="@array/categories" />

                    <Spinner
                        android:id="@+id/spinner_outlet_sub_categories"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="@dimen/padding_default"
                        android:layout_weight="1"
                        android:background="@drawable/input_bg_border_selector"
                        android:entries="@array/categories" />
                </LinearLayout>
                <!--
                <RadioGroup
                    android:id="@+id/rg_outlet_category"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:checkedButton="@+id/rb_outlet_dining"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rb_outlet_dining"
                        style="@style/content_radio_btn_style"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/dining" />

                    <RadioButton
                        android:id="@+id/rb_outlet_flow"
                        style="@style/content_radio_btn_style"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/flow" />

                    <RadioButton
                        android:id="@+id/rb_outlet_trader"
                        style="@style/content_radio_btn_style"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/trader" />
                </RadioGroup>
                -->
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_height"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="@dimen/spacing_big"
                android:orientation="horizontal">

                <TextView
                    style="@style/content_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/address" />

                <EditText
                    android:id="@+id/edt_outlet_address"
                    style="@style/content_edit_single_line_style"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/padding_default"
                    android:hint="@string/please_input_address"
                    android:paddingLeft="@dimen/padding_default"
                    android:paddingRight="@dimen/padding_default" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_height"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="@dimen/spacing_big"
                android:orientation="horizontal">

                <TextView
                    style="@style/content_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contacts" />

                <EditText
                    android:id="@+id/edt_outlet_contact"
                    style="@style/content_edit_single_line_style"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/padding_default"
                    android:hint="@string/please_input_contacts"
                    android:paddingLeft="@dimen/padding_default"
                    android:paddingRight="@dimen/padding_default" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/default_height"
                android:layout_gravity="center_vertical"
                android:layout_marginTop="@dimen/spacing_big"
                android:orientation="horizontal">

                <TextView
                    style="@style/content_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/phone_number" />

                <EditText
                    android:id="@+id/edt_outlet_phone_number"
                    style="@style/content_edit_single_line_style"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/padding_default"
                    android:hint="@string/please_input_phone_number"
                    android:inputType="phone"
                    android:paddingLeft="@dimen/padding_default"
                    android:paddingRight="@dimen/padding_default" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_big"
                android:minHeight="80dp"
                android:orientation="horizontal">

                <TextView
                    style="@style/content_text_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="top"
                    android:text="@string/remark" />

                <EditText
                    android:id="@+id/edt_outlet_remark"
                    style="@style/content_edit_style"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/padding_default"
                    android:gravity="top"
                    android:hint="@string/remark_hint"
                    android:padding="@dimen/padding_default" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="@dimen/spacing_big"
                android:orientation="horizontal">

                <mehdi.sakout.fancybuttons.FancyButton xmlns:fb="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/btn_outlet_save"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/spacing_small"
                    android:layout_weight="1"
                    fb:fb_defaultColor="@color/but_orange_normal"
                    fb:fb_focusColor="@color/but_orange_press"
                    fb:fb_text="@string/outlet_save_and_quit"
                    fb:fb_textColor="@color/white"
                    fb:fb_textSize="@dimen/font_default"
                    fb:radius="5dp" />

                <mehdi.sakout.fancybuttons.FancyButton xmlns:fb="http://schemas.android.com/apk/res-auto"
                    android:id="@+id/btn_outlet_next"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/spacing_small"
                    android:layout_weight="1"
                    fb:fb_defaultColor="#23B6EC"
                    fb:fb_text="@string/outlet_next"
                    fb:fb_textColor="@color/white"
                    fb:radius="5dp" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>
